añadido nuevo artículo

--- a/_posts/2020-04-04-covid-19.md
+++ b/_posts/2020-04-04-covid-19.md
@@ -1,21 +1,10 @@
 ---
 layout: post
-title: "Evolución diaria de la pandemia de COVID-19 en España y en el mundo"
+title: "Bienvenid@"
 author: "Manuel Mejías"
-categories: Covid-19
-tags: [Covid,datos]
+categories: bienvenida
+tags: [bienvenida]
 image: mountains.jpg
 ---
 
-1. [Evolución diaria de COVID-19 en España según situación clínica](#jekyll-starter-kit)
-2. Evolución del número de nuevos casos y fallecimientos a diario
-3. Los casos y fallecimientos confirmados en cada Comunidad Autónoma
-4. Tasa de multiplicación de casos y fallecimientos
-5. Tasa de multiplicación de casos para cada Comunidad Autónoma
-6. Tiempo de duplicación de casos y fallecimientos
-7. Tiempo de duplicación de casos para cada Comunidad Autónoma
-8. Número reproductivo (R)
-9. Evolución del número de nuevos casos y fallecimientos por países
-
-<iframe title="Tasa de riesgo de pobreza por Comunidades Aut&oacute;nomas" aria-label="Spain autonomous communities choropleth map" id="datawrapper-chart-xehwk" src="//datawrapper.dwcdn.net/xehwk/8/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="693"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",function(a){if(void 0!==a.data["datawrapper-height"])for(var e in a.data["datawrapper-height"]){var t=document.getElementById("datawrapper-chart-"+e)||document.querySelector("iframe[src*='"+e+"']");t&&(t.style.height=a.data["datawrapper-height"][e]+"px")}})}();
-</script>
+## Bienvenid@
