añadido nuevo artículo

--- a/_posts/2020-04-07-Covid19.md
+++ b/_posts/2020-04-07-Covid19.md
@@ -29,6 +29,10 @@ image: /img_covid/covid19.png
 <iframe title="Evoluci&oacute;n del n&uacute;mero de fallecidos en Espa&ntilde;a" aria-label="Interactive line chart" id="datawrapper-chart-2DRIB" src="//datawrapper.dwcdn.net/2DRIB/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="442"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",function(a){if(void 0!==a.data["datawrapper-height"])for(var e in a.data["datawrapper-height"]){var t=document.getElementById("datawrapper-chart-"+e)||document.querySelector("iframe[src*='"+e+"']");t&&(t.style.height=a.data["datawrapper-height"][e]+"px")}})}();
 </script>
 
+
+<iframe title="Evoluci&oacute;n del n&uacute;mero de fallecidos en Espa&ntilde;a" aria-label="Interactive line chart" id="datawrapper-chart-2DRIB" src="//datawrapper.dwcdn.net/2DRIB/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="442"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",function(a){if(void 0!==a.data["datawrapper-height"])for(var e in a.data["datawrapper-height"]){var t=document.getElementById("datawrapper-chart-"+e)||document.querySelector("iframe[src*='"+e+"']");t&&(t.style.height=a.data["datawrapper-height"][e]+"px")}})}();
+</script>
+
 ### <a name="2"></a>Número de casos y fallecidos acumulados
 
 <p align="justify">En los siguientes gráficos se visualiza el número total de fallecidos y de casos acumulados en escala lineal. Este tipo de escala no representa de manera clara la evolución de la epidemia. Esto es debido a que esta toma un crecimiento exponencial al principio, y hace más difícil observar su tendencia evolutiva. Algunos<a target="_blank" href="https://twitter.com/jburnmurdoch/status/1237748598051409921"> especialistas en visualización de datos</a> recomiendan presentar la evolución de la epidemia en escala logarítmica (en el primer gráfico interactivo se puede observar).</p>
