añadido nuevo artículo

--- a/_posts/2020-04-07-Covid19.md
+++ b/_posts/2020-04-07-Covid19.md
@@ -12,31 +12,23 @@ image: /img_covid/covid19.png
 
 
 1. [**Evolución diaria de la epidemia en España.**](#1)
-2. [**Número de casos y fallecidos acumulados.**](#2)
-3. [**Evolución del número de nuevos casos y fallecimientos a diario.**](#3)
-4. [**Los casos y fallecimientos confirmados en cada Comunidad Autónoma.**](#4)
-5. [**Tiempo de duplicación de casos y fallecimientos.**](#5)
-6. [**Tiempo de duplicación de casos para cada Comunidad Autónoma.**](#6)
-7. [**Número reproductivo (R).**](#7)
-8. [**Evolución del número de nuevos casos y fallecimientos por países.**](#8)
-
-<p align="justify">España está atravesando uno de los peores brotes de Coronavirus en el mundo. En este post se presentan datos relativos a la evolución de la pandemia tanto a nivel nacional, autonómico e internacional. Los resultados a nivel nacional se obtienen a partir de la información diaria que ofrece el <a target="_blank" href="https://covid19.isciii.es/">Ministerio de Sanidad, Consumo y Bienestar Social</a>. Para las Comunidades Autónomas, los datos son obtenidos a partir de la información que proporciona el equipo de  <a target="_blank" href="https://lab.montera34.com/covid19/">Numeroteca</a>. Y, por último, los datos a nivel mundial, son tomados a través de la <a target="_blank" href="https://coronavirus.jhu.edu/map.html">Johns Hopkins University</a>. Los gráficos se actualizan cada día.</p>
-
-### <a name="1"></a>Evolución diaria de COVID-19 en España
-
-<p align="justify">El siguiente gráfico presentan la evolución del número de fallecidos que está dejando la epidemia en España. Como se puede observar, la trayectoria de la curva de fallecidos está tomando forma de meseta. Esto indica que se está en una fase de control del brote. Y en unos días podría empezar a tomar una línea descendente.</p>
-
-<iframe title="Evoluci&oacute;n del n&uacute;mero de fallecidos  en Espa&ntilde;a" aria-label="Interactive line chart" id="datawrapper-chart-2DRIB" src="//datawrapper.dwcdn.net/2DRIB/4/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="442"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",function(a){if(void 0!==a.data["datawrapper-height"])for(var e in a.data["datawrapper-height"]){var t=document.getElementById("datawrapper-chart-"+e)||document.querySelector("iframe[src*='"+e+"']");t&&(t.style.height=a.data["datawrapper-height"][e]+"px")}})}();
-</script>
+2. [**Evolución del número de nuevos casos y fallecimientos a diario.**](#2)
+3. [**Los casos y fallecimientos confirmados en cada Comunidad Autónoma.**](#3)
+4. [**Tiempo de duplicación de casos y fallecimientos.**](#4)
+5. [**Tiempo de duplicación de casos para cada Comunidad Autónoma.**](#5)
+6. [**Número reproductivo (R).**](#6)
+7. [**Evolución del número de nuevos casos y fallecimientos por países.**](#7)
+8. [**Número de test Covid-19 por millón de habitantes.**](#8)
+9. [**¿El virus no entiende de ricos o pobres?.**](#9)
 
 
-<iframe title="Evoluci&oacute;n del n&uacute;mero de casos en Espa&ntilde;a" aria-label="Interactive line chart" id="datawrapper-chart-JSCW4" src="//datawrapper.dwcdn.net/JSCW4/3/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="400"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",function(a){if(void 0!==a.data["datawrapper-height"])for(var e in a.data["datawrapper-height"]){var t=document.getElementById("datawrapper-chart-"+e)||document.querySelector("iframe[src*='"+e+"']");t&&(t.style.height=a.data["datawrapper-height"][e]+"px")}})}();
-</script>
+<p align="justify">España está atravesando uno de los peores brotes de Coronavirus en el mundo. En este post se presentan datos relativos a la evolución de la pandemia tanto a nivel nacional, autonómico e internacional para tratar de clarificar algunos aspectos del ritmo de la pandemia. Los resultados a nivel nacional se obtienen a partir de la información diaria que ofrece el <a target="_blank" href="https://covid19.isciii.es/">Ministerio de Sanidad, Consumo y Bienestar Social</a>. Para las Comunidades Autónomas, los datos son obtenidos a partir de la información que proporciona el equipo de  <a target="_blank" href="https://lab.montera34.com/covid19/">Numeroteca</a>. Y, para el análisis internacional, los datos que se toman son los que ofrece la <a target="_blank" href="https://coronavirus.jhu.edu/map.html">Johns Hopkins University</a>.</p>
 
+### <a name="1"></a>Evolución diaria de la epidemia en España
 
-### <a name="2"></a>Número de casos y fallecidos acumulados
+<p align="justify">Al principio del brote se puede observar cómo los fallecidos y los casos confirmados crecen de forma exponencial. Es fácil observarlo en el gráfico interactivo en escala logarítmica, ya que la línea sigue una evolución en línea recta: la pendiente de esa recta marca el ritmo del crecimiento e informa de con qué velocidad avanza la epidemia. En España, al principio los fallecidos y los casos se doblaban muy deprisa, pero a partir de la segunda semana -aproximadamente- su curva comienza a aplanarse. El objetivo es lograr que se aplane un poco más cada día.</p>
 
-<p align="justify">En los siguientes gráficos se visualiza el número total de fallecidos y de casos acumulados en escala lineal. Este tipo de escala no representa de manera clara la evolución de la epidemia. Esto es debido a que esta toma un crecimiento exponencial al principio, y hace más difícil observar su tendencia evolutiva. Algunos<a target="_blank" href="https://twitter.com/jburnmurdoch/status/1237748598051409921"> especialistas en visualización de datos</a> recomiendan presentar la evolución de la epidemia en escala logarítmica (en el primer gráfico interactivo se puede observar).</p>
+<p align="justify">Se presentan los datos en escala logarítmica porque de esta manera se captura mejor la naturaleza de la epidemia. Esto es debido a que en su evolución el número de casos se multiplica.</p>
 
 <div class="row mb-4 mt-4">
     <div class="col-12">
@@ -53,10 +45,12 @@ image: /img_covid/covid19.png
             </div>
             <div class="tab-content" id="myTabContent">
             <div class="tab-pane fade show active p-3" id="one" role="tabpanel" aria-labelledby="one-tab">
-                <img src="{{ site.github.url }}/assets/img/img_covid/p2.png">             
+                <iframe title="Evoluci&oacute;n del n&uacute;mero de fallecidos  en Espa&ntilde;a" aria-label="Interactive line chart" id="datawrapper-chart-2DRIB" src="//datawrapper.dwcdn.net/2DRIB/4/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="442"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",function(a){if(void 0!==a.data["datawrapper-height"])for(var e in a.data["datawrapper-height"]){var t=document.getElementById("datawrapper-chart-"+e)||document.querySelector("iframe[src*='"+e+"']");t&&(t.style.height=a.data["datawrapper-height"][e]+"px")}})}();
+                </script>         
             </div>
             <div class="tab-pane fade p-3" id="two" role="tabpanel" aria-labelledby="two-tab">
-                <img src="{{ site.github.url }}/assets/img/img_covid/p1.png">                    
+                 <iframe title="Evoluci&oacute;n del n&uacute;mero de casos en Espa&ntilde;a" aria-label="Interactive line chart" id="datawrapper-chart-JSCW4" src="//datawrapper.dwcdn.net/JSCW4/4/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="400"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",function(a){if(void 0!==a.data["datawrapper-height"])for(var e in a.data["datawrapper-height"]){var t=document.getElementById("datawrapper-chart-"+e)||document.querySelector("iframe[src*='"+e+"']");t&&(t.style.height=a.data["datawrapper-height"][e]+"px")}})}();
+                </script>            
             </div>
             </div>
         </div>
@@ -68,9 +62,11 @@ image: /img_covid/covid19.png
     })
 </script>
 
-### <a name="3"></a>Evolución del número de nuevos casos y fallecimientos a diario
+### <a name="2"></a>Evolución del número de nuevos casos y fallecimientos a diario
 
-<p align="justify">La tendencia de la curva se observa bastante bien en los siguientes gráficos. Estos presentan el número diario de nuevos casos y nuevos fallecimientos. Las líneas de colores muestran la tendencia que siguen los datos, y dibujan la forma de meseta que está tomando la trayectoria de la epidemia.</p>
+<p align="justify">La tendencia de la curva se observa bastante bien en los siguientes gráficos. Estos presentan el número diario de nuevos casos y nuevos fallecimientos. Las líneas de colores muestran la tendencia que siguen los datos, y dibujan la forma de meseta que está tomando la trayectoria de la epidemia. Es muy probable que hayamos superado la fase de contención del brote, y en pocos días veremos una tendencia descendente en la curva epidémica.</p>
+
+<p align="justify">Aquí es importante observar la gráfica del número de fallecimientos. Estas cifras tienen el inconveniente de que llegan con retraso, debido a que las muertes tardan en producirse dos o tres semanas. Pero -aunque no es un registro perfecto- son datos más precisos que los del número de casos.</p>
 
 <div class="row mb-4 mt-4">
     <div class="col-12">
@@ -102,9 +98,9 @@ image: /img_covid/covid19.png
     })
 </script>
 
-### <a name="4"></a>Los casos y fallecimientos confirmados en cada Comunidad Autónoma
+### <a name="3"></a>Los casos y fallecimientos confirmados en cada Comunidad Autónoma
 
-<p align="justify">Los siguientes gráficos nos muestran la evolución de la epidemia en las diferentes CCAA. En general, las visualizaciones en escala logarítmica muestran un aplanamiento de la curva en la mayoría de Comunidades, tanto para los casos acumulados como para los fallecimientos.</p>
+<p align="justify">Los siguientes gráficos nos muestran la evolución de la epidemia en las diferentes CCAA. En general, las visualizaciones en escala logarítmica muestran un aplanamiento de la curva en la mayoría de Comunidades, tanto para los casos acumulados como para los fallecimientos. Las líneas no son rectas como al principio, sino que se están doblando.</p>
 
 <div class="row mb-4 mt-4">
     <div class="col-12">
@@ -136,9 +132,9 @@ image: /img_covid/covid19.png
     })
 </script>
 
-### <a name="5"></a>Tiempo de duplicación de casos y fallecimientos
+### <a name="4"></a>Tiempo de duplicación de casos y fallecimientos
 
-<p align="justify"><b>El tiempo de duplicación</b>. Este indicador también trata de mostrar el ritmo de evolución de la epidemia. Basado en este artículo de <a target="_blank" href="https://blog.datawrapper.de/weekly-chart-coronavirus-doublingtimes/">Lisa Charlotte</a>, he calculado el tiempo en el que se duplican el número de casos y fallecimientos a nivel nacional y autonómico.</p>
+<p align="justify"><b>Tiempo de duplicación</b>. Este indicador también trata de mostrar el ritmo de evolución de la epidemia. Basado en este artículo de <a target="_blank" href="https://blog.datawrapper.de/weekly-chart-coronavirus-doublingtimes/">Lisa Charlotte</a>, he calculado el tiempo en el que se duplican el número de casos y fallecimientos a nivel nacional y autonómico.</p>
 
 <p align="justify">En este caso, si la línea es ascendente, el número de casos y fallecimientos tarda más días en duplicarse. Si el tiempo de duplicación aumenta, el brote crece a un ritmo menor.</p>
 
@@ -172,13 +168,13 @@ image: /img_covid/covid19.png
     })
 </script>
 
-### <a name="6"></a>Tiempo de duplicación de casos para cada Comunidad Autónoma
+### <a name="5"></a>Tiempo de duplicación de casos para cada Comunidad Autónoma
 
 ![Tiempo de duplicación CCAA]({{ site.github.url }}/assets/img/img_covid/p13.png)
 
-### <a name="7"></a>Número reproductivo (R)
+### <a name="6"></a>Número reproductivo (R)
 
-<p align="justify"><b>El número reproductivo (R)</b>. Este es otro indicador que se utiliza para seguir el ritmo del virus. Es posiblemente el mejor. Este número estima a cuántas personas contagia, en media, cada infectado. Si este número baja de 1 -si cada infectado contagia a menos de una persona- el brote empieza a remitir. Según <a target="_blank" href="https://cmmid.github.io/topics/covid19/control-measures/report/uk_scenario_modelling_preprint_2020_04_01.pdf">este trabajo del Department of Infectious Disease Epidemiology, de la London School of Hygiene & Tropical Medicine</a>, el R0 para Europa se ha estimado en un valor alrededor de 3 en ausencia de medidas de control del virus.</p>
+<p align="justify"><b>Número reproductivo (R)</b>. Este es otro indicador que se utiliza para seguir el ritmo del virus. Es posiblemente el mejor. Este número estima a cuántas personas contagia, en media, cada infectado. Si este número baja de 1 -si cada infectado contagia a menos de una persona- el brote empieza a remitir. Según <a target="_blank" href="https://cmmid.github.io/topics/covid19/control-measures/report/uk_scenario_modelling_preprint_2020_04_01.pdf">este trabajo del Department of Infectious Disease Epidemiology, de la London School of Hygiene & Tropical Medicine</a>, el R0 para Europa se ha estimado en un valor alrededor de 3 en ausencia de medidas de control del virus.</p>
 
 
 
@@ -212,9 +208,9 @@ image: /img_covid/covid19.png
     })
 </script>
 
-### <a name="8"></a>Evolución del número de nuevos casos y fallecimientos por países
+### <a name="7"></a>Evolución del número de nuevos casos y fallecimientos por países
 
-<p align="justify">Por último, presento dos gráficos para observar la evolución del número diario de nuevos casos y fallecimientos en varios países. Para dibujar la trayectoria que dibuja la curva en varios países, he tomado una media móvil de 7 días. La trayectoria de la curva para Italia y España toma la forma de meseta. La línea a seguir es la de Corea del Sur y China. Estos países cada día reportan menos muertes y número de casos.</p>
+<p align="justify">Para analizar la situación a nivel internacional, aquí presento dos gráficos que muestran la evolución del número diario de nuevos casos y fallecimientos en diferentes países. Para dibujar la tendencia que la curva tiene en varios países, he tomado una media móvil de 7 días. La trayectoria de la curva para Italia y España tiene una forma de meseta. La línea a seguir es la de Corea del Sur y China. Estos países cada día reportan menos muertes y número de casos.</p>
 
 <div class="row mb-4 mt-4">
     <div class="col-12">
@@ -247,4 +243,16 @@ image: /img_covid/covid19.png
 </script>
 
 
+### <a name="8"></a>Número de test Covid-19 por millón de habitantes
 
+<p align="justify">La realización masiva de test a la población es una medida que recientemente ha recomendado la Organización Mundial de la Salud (OMS) en la lucha contra la pandemia. Como se puede observar en los datos presentados, las diferencias entre países en el número de test realizados es bastante grande.</p> 
+
+![Test por millón hab]({{ site.github.url }}/assets/img/img_covid/p18.png)
+
+### <a name="9"></a>¿El virus no entiende de clases sociales?
+
+<p align="justify">Por último, presento datos sobre casos x100.000 habitantes por distrito de la ciudad de <a target="_blank" href="https://www.comunidad.madrid/servicios/salud 2019-nuevo-coronavirus">Madrid</a> comparado con algunas variables sociodemográficas. En primer lugar, los datos señalan que a mayor vulnerabilidad más casos notificados de Covid-19. En segundo lugar, parece observarse que a mayor porcentaje de población con estudios superiores en el distrito, menor son los casos reportados de Covid-19. En este caso puede jugar un papel fundamental el hecho de que aquellas personas con estudios de grado superior pueden realizar teletrabajo, evitando así una exposición al contagio. En tercer lugar, se encuentra que a mayor proporción de viviendas hacinadas, mayor es el número de casos Covid-19. Y, por último, también parece que a mayor precio del alquiler, menor es el número de casos reportados por Covid-19. </p>
+
+<p align="justify">Estos datos son muy preliminares y tienen muchas limitaciones. Aunque dan luz sobre las desigualdades sociales en la salud que va a traer la epidemia de Coronavirus en España, y que van a sufrir las clases sociales más vulnerables. En fin, los datos apuntan a que hay que abandonar el discurso de que el virus no entiende de estratos sociales.  </p>
+
+![Desigualdad en salud Madrid]({{ site.github.url }}/assets/img/img_covid/p19.png)
