añadido nuevo artículo

--- a/_posts/2020-04-07-Covid19.md
+++ b/_posts/2020-04-07-Covid19.md
@@ -19,7 +19,7 @@ image: /img_covid/covid19.png
 6. [**Número reproductivo (R).**](#6)
 7. [**Evolución del número de nuevos casos y fallecimientos por países.**](#7)
 8. [**Número de test Covid-19 por millón de habitantes.**](#8)
-9. [**¿El virus no entiende de ricos o pobres?.**](#9)
+9. [**¿El virus no entiende de clases sociales?.**](#9)
 
 
 <p align="justify">España está atravesando uno de los peores brotes de Coronavirus en el mundo. En este post se presentan datos relativos a la evolución de la pandemia tanto a nivel nacional, autonómico e internacional para tratar de clarificar algunos aspectos del ritmo de la pandemia. Los resultados a nivel nacional se obtienen a partir de la información diaria que ofrece el <a target="_blank" href="https://covid19.isciii.es/">Ministerio de Sanidad, Consumo y Bienestar Social</a>. Para las Comunidades Autónomas, los datos son obtenidos a partir de la información que proporciona el equipo de  <a target="_blank" href="https://lab.montera34.com/covid19/">Numeroteca</a>. Y, para el análisis internacional, los datos que se toman son los que ofrece la <a target="_blank" href="https://coronavirus.jhu.edu/map.html">Johns Hopkins University</a>.</p>
