--- a/_posts/2020-04-07-Covid19.md
+++ b/_posts/2020-04-07-Covid19.md
@@ -220,5 +220,6 @@ image: /img_covid/covid19.png
 
 <p align="justify">¿Qué es MoMo? Según el Instituto de Salud Carlos III este "es un sistema para la Vigilancia de la mortalidad diaria por todas las causas en España. Tiene como objetivo identificar patrones inusuales de mortalidad y estimar el impacto en la mortalidad de la población de cualquier evento de importancia para guiar la acción en Salud Pública".</p> 
 
-<iframe title="Mortalidad por todas las causas en Espa&ntilde;a. Defunciones Observadas, esperadas e intervalo de confianza" aria-label="Interactive line chart" id="datawrapper-chart-3L5Nv" src="//datawrapper.dwcdn.net/3L5Nv/5/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="527"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",function(a){if(void 0!==a.data["datawrapper-height"])for(var e in a.data["datawrapper-height"]){var t=document.getElementById("datawrapper-chart-"+e)||document.querySelector("iframe[src*='"+e+"']");t&&(t.style.height=a.data["datawrapper-height"][e]+"px")}})}();
+
+<iframe title="Mortalidad por todas las causas en Espa&ntilde;a. Defunciones Observadas, esperadas e intervalo de confianza" aria-label="Interactive line chart" id="datawrapper-chart-DR7Zj" src="//datawrapper.dwcdn.net/DR7Zj/3/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="527"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",function(a){if(void 0!==a.data["datawrapper-height"])for(var e in a.data["datawrapper-height"]){var t=document.getElementById("datawrapper-chart-"+e)||document.querySelector("iframe[src*='"+e+"']");t&&(t.style.height=a.data["datawrapper-height"][e]+"px")}})}();
 </script>
